small update before optimizing the model

--- a/topic_modeling/topic_modeling.ipynb
+++ b/topic_modeling/topic_modeling.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import json\n",
-    "import glob\n",
     "import gensim\n",
     "import gensim.corpora as corpora\n",
     "from gensim.utils import simple_preprocess\n",
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,9 +100,9 @@
     }
    ],
    "source": [
+    "print(\"vectorizing...\")\n",
     "id2word = corpora.Dictionary(data_words)\n",
     "corpus = []\n",
-    "print(\"doing some shi...\")\n",
     "for text in data_words:\n",
     "    new = id2word.doc2bow(text)\n",
     "    corpus.append(new)\n",
