--- a/Classification/classification_output_vis.ipynb
+++ b/Classification/classification_output_vis.ipynb
@@ -191,14 +191,14 @@
     "# data = pd.read_csv('./classified_data/regions/west_asia/classified_data/Singapore_classification_output.csv')\n",
     "\n",
     "# data = pd.read_csv('./classified_data/regions/africa/classified_data/Kenya_classification_output.csv')\n",
-    "data = pd.read_csv('./classified_data/regions/africa/classified_data/Nigeria_classification_output.csv')\n",
+    "# data = pd.read_csv('./classified_data/regions/africa/classified_data/Nigeria_classification_output.csv')\n",
     "# data = pd.read_csv('./classified_data/regions/africa/classified_data/SouthAfrica_classification_output.csv')\n",
     "\n",
     "# data = pd.read_csv('./classified_data/regions/north_america_australia/classified_data/Australia_classification_output.csv')\n",
     "# data = pd.read_csv('./classified_data/regions/north_america_australia/classified_data/Canada_classification_output.csv')\n",
     "# data = pd.read_csv('./classified_data/regions/north_america_australia/classified_data/USA_classification_output.csv')\n",
     "\n",
-    "# data = pd.read_csv('./classified_data/regions/europe/classified_data/Denmark_classification_output.csv')\n",
+    "data = pd.read_csv('./classified_data/regions/europe/classified_data/Denmark_classification_output.csv')\n",
     "# data = pd.read_csv('./classified_data/regions/europe/classified_data/UK_classification_output.csv')\n",
     "# data = pd.read_csv('./classified_data/regions/europe/classified_data/Finland_classification_output.csv')\n",
     "\n",
@@ -261,7 +261,7 @@
     "maxTraffic = df['traffic_numeric'].max()\n",
     "\n",
     "category_time_distribution = df.groupby(['date', 'predicted_label'])['traffic_numeric'].sum().reset_index(name='total_traffic')\n",
-    "specific_category = \"media and entertainment\"\n",
+    "specific_category = \"politics\"\n",
     "specific_category_data = category_time_distribution[category_time_distribution['predicted_label'] == specific_category]\n",
     "\n",
     "plt.figure(figsize=(33, 7))\n",
