after clustering the categories into larger and more generic categories, i designed an algorithm to calculate the traffic rate relatively to the max traffic number by making the max equal to 1, and the min equal to 0, and i added few measurment values between 0 and 1, as a result now i can measure the interaction with a specific topic in each country using a fixed measurment unit.

--- a/Classification/Model.ipynb
+++ b/Classification/Model.ipynb
@@ -35,7 +35,7 @@
     "# data = pd.read_csv('../preprocessed_data/cleaned_data_Singapore.csv')\n",
     "# data = pd.read_csv('../preprocessed_data/cleaned_data_Denmark.csv')\n",
     "# data = pd.read_csv('../preprocessed_data/cleaned_data_UK.csv')\n",
-    "data = pd.read_csv('../preprocessed_data/cleaned_data_Finland.csv')\n",
+    "# data = pd.read_csv('../preprocessed_data/cleaned_data_Finland.csv')\n",
     "\n",
     "\n",
     "\n",
