initial countries-across topic related similiarity calculation test, the results are not bad neither good, i will probably redesign the idea

--- a/Classification/relative_traffic_rate_calculation.ipynb
+++ b/Classification/relative_traffic_rate_calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,30 +41,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country = countries['north_america_australia'][2]\n",
+    "country = countries['west_asia'][2]\n",
     "#--------general labels--------#\n",
-    "# path = f\"./classified_data/regions/africa/clustered_classified_data/{country}_clustered_classified.csv\"\n",
-    "# path = f'./classified_data/regions/europe/clustered_classified_data/{country}_clustered_classified.csv'\n",
-    "path = f'./output/regions/north_america_australia/clustered_classified_data/{country}_clustered_classified.csv'\n",
-    "# path = f'./classified_data/regions/west_asia/clustered_classified_data/{country}_clustered_classified.csv'\n",
+    "# path = f\"./output/regions/africa/clustered_classified_data/{country}_clustered_classified.csv\"\n",
+    "# path = f'./output/regions/europe/clustered_classified_data/{country}_clustered_classified.csv'\n",
+    "# path = f'./output/regions/north_america_australia/clustered_classified_data/{country}_clustered_classified.csv'\n",
+    "path = f'./output/regions/west_asia/clustered_classified_data/{country}_clustered_classified.csv'\n",
     "data = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First max traffic: 10000000\n",
-      "Second max traffic: 5000000\n",
+      "First max traffic: 200000\n",
+      "Second max traffic: 200000\n",
       "Duplicates found in 'date'. Aggregating data.\n"
      ]
     },
@@ -72,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alkrd\\AppData\\Local\\Temp\\ipykernel_3876\\1633571104.py:33: SettingWithCopyWarning: \n",
+      "C:\\Users\\alkrd\\AppData\\Local\\Temp\\ipykernel_9944\\1615631643.py:33: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -111,37 +111,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2016-11-28</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>300000.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2016-11-29</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>600000.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2016-11-30</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>3000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-12-01</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-12-02</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -153,37 +153,37 @@
        "    <tr>\n",
        "      <th>153</th>\n",
        "      <td>2017-04-30</td>\n",
-       "      <td>Technology and Science</td>\n",
+       "      <td>Lifestyle</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>154</th>\n",
        "      <td>2017-05-01</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155</th>\n",
        "      <td>2017-05-02</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>11000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
        "      <td>2017-05-03</td>\n",
-       "      <td>Technology and Science</td>\n",
+       "      <td>Lifestyle</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>150000.0</td>\n",
+       "      <td>4000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>157</th>\n",
        "      <td>2017-05-04</td>\n",
-       "      <td>Technology and Science</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>100000.0</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -191,23 +191,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          date           general_label  traffic_rate  total_traffic\n",
-       "0   2016-11-28  Technology and Science           0.1       300000.0\n",
-       "1   2016-11-29  Technology and Science           0.1       600000.0\n",
-       "2   2016-11-30  Technology and Science           0.0            0.0\n",
-       "3   2016-12-01  Technology and Science           0.0            0.0\n",
-       "4   2016-12-02  Technology and Science           0.0            0.0\n",
-       "..         ...                     ...           ...            ...\n",
-       "153 2017-04-30  Technology and Science           0.0            0.0\n",
-       "154 2017-05-01  Technology and Science           0.0            0.0\n",
-       "155 2017-05-02  Technology and Science           0.0            0.0\n",
-       "156 2017-05-03  Technology and Science           0.1       150000.0\n",
-       "157 2017-05-04  Technology and Science           0.1       100000.0\n",
+       "          date general_label  traffic_rate  total_traffic\n",
+       "0   2016-11-28     Lifestyle           0.0            0.0\n",
+       "1   2016-11-29     Lifestyle           0.0            0.0\n",
+       "2   2016-11-30     Lifestyle           0.1         3000.0\n",
+       "3   2016-12-01     Lifestyle           0.1         1000.0\n",
+       "4   2016-12-02     Lifestyle           0.1         1000.0\n",
+       "..         ...           ...           ...            ...\n",
+       "153 2017-04-30     Lifestyle           0.0            0.0\n",
+       "154 2017-05-01     Lifestyle           0.1         1000.0\n",
+       "155 2017-05-02     Lifestyle           0.1        11000.0\n",
+       "156 2017-05-03     Lifestyle           0.1         4000.0\n",
+       "157 2017-05-04     Lifestyle           0.0            0.0\n",
        "\n",
        "[158 rows x 4 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
     ")\n",
     "\n",
     "# Filter for a specific category\n",
-    "specific_category = clusters[1]  # Ensure clusters is defined\n",
+    "specific_category = clusters[3]  # Ensure clusters is defined\n",
     "specific_category_data = category_time_distribution[\n",
     "    category_time_distribution['general_label'] == specific_category\n",
     "]\n",
@@ -278,7 +278,10 @@
     "specific_category_data.reset_index(inplace=True)\n",
     "specific_category_data.rename(columns={'index': 'date'}, inplace=True)\n",
     "\n",
-    "specific_category_data.to_csv(f'./output/regions/north_america_australia/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
+    "# specific_category_data.to_csv(f'./output/regions/north_america_australia/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
+    "# specific_category_data.to_csv(f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
+    "# specific_category_data.to_csv(f'./output/regions/europe/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
+    "specific_category_data.to_csv(f'./output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/{country}_with_relative_traffic_rates.csv', index=False)\n",
     "\n",
     "specific_category_data\n",
     "\n"
