--- a/Classification/relative_traffic_rate_calculation.ipynb
+++ b/Classification/relative_traffic_rate_calculation.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alkrd\\AppData\\Local\\Temp\\ipykernel_9944\\1615631643.py:33: SettingWithCopyWarning: \n",
+      "C:\\Users\\alkrd\\AppData\\Local\\Temp\\ipykernel_7700\\2482072513.py:33: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -111,36 +112,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2016-11-28</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2016-11-29</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2016-11-30</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>3000.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>201000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-12-01</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>1000.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-12-02</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.10</td>\n",
        "      <td>1000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -153,37 +154,37 @@
        "    <tr>\n",
        "      <th>153</th>\n",
        "      <td>2017-04-30</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>154</th>\n",
        "      <td>2017-05-01</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>1000.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>2000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155</th>\n",
        "      <td>2017-05-02</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>11000.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>7000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
        "      <td>2017-05-03</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>4000.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>157</th>\n",
        "      <td>2017-05-04</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Intellectualism</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>6000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -191,23 +192,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          date general_label  traffic_rate  total_traffic\n",
-       "0   2016-11-28     Lifestyle           0.0            0.0\n",
-       "1   2016-11-29     Lifestyle           0.0            0.0\n",
-       "2   2016-11-30     Lifestyle           0.1         3000.0\n",
-       "3   2016-12-01     Lifestyle           0.1         1000.0\n",
-       "4   2016-12-02     Lifestyle           0.1         1000.0\n",
-       "..         ...           ...           ...            ...\n",
-       "153 2017-04-30     Lifestyle           0.0            0.0\n",
-       "154 2017-05-01     Lifestyle           0.1         1000.0\n",
-       "155 2017-05-02     Lifestyle           0.1        11000.0\n",
-       "156 2017-05-03     Lifestyle           0.1         4000.0\n",
-       "157 2017-05-04     Lifestyle           0.0            0.0\n",
+       "          date    general_label  traffic_rate  total_traffic\n",
+       "0   2016-11-28  Intellectualism          0.00            0.0\n",
+       "1   2016-11-29  Intellectualism          0.00            0.0\n",
+       "2   2016-11-30  Intellectualism          0.55       201000.0\n",
+       "3   2016-12-01  Intellectualism          0.00            0.0\n",
+       "4   2016-12-02  Intellectualism          0.10         1000.0\n",
+       "..         ...              ...           ...            ...\n",
+       "153 2017-04-30  Intellectualism          0.00            0.0\n",
+       "154 2017-05-01  Intellectualism          0.10         2000.0\n",
+       "155 2017-05-02  Intellectualism          0.10         7000.0\n",
+       "156 2017-05-03  Intellectualism          0.00            0.0\n",
+       "157 2017-05-04  Intellectualism          0.10         6000.0\n",
        "\n",
        "[158 rows x 4 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
     ")\n",
     "\n",
     "# Filter for a specific category\n",
-    "specific_category = clusters[3]  # Ensure clusters is defined\n",
+    "specific_category = clusters[6]  # Ensure clusters is defined\n",
     "specific_category_data = category_time_distribution[\n",
     "    category_time_distribution['general_label'] == specific_category\n",
     "]\n",
@@ -278,10 +279,12 @@
     "specific_category_data.reset_index(inplace=True)\n",
     "specific_category_data.rename(columns={'index': 'date'}, inplace=True)\n",
     "\n",
-    "# specific_category_data.to_csv(f'./output/regions/north_america_australia/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
-    "# specific_category_data.to_csv(f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
-    "# specific_category_data.to_csv(f'./output/regions/europe/genral_labeled_data_with_relative_traffic_rates/{country}_with_relative_traffic_rates.csv', index=False)\n",
-    "specific_category_data.to_csv(f'./output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/{country}_with_relative_traffic_rates.csv', index=False)\n",
+    "pathString = f'./output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/{specific_category}/{country}_with_relative_traffic_rates.csv'\n",
+    "directory = os.path.dirname(pathString)\n",
+    "\n",
+    "if not os.path.exists(directory):\n",
+    "    os.makedirs(directory)\n",
+    "specific_category_data.to_csv(pathString, index=False)\n",
     "\n",
     "specific_category_data\n",
     "\n"
