--- a/Classification/traffic_pattern_similarity.ipynb
+++ b/Classification/traffic_pattern_similarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similarity Score: 70\n",
+      "Kenya-SouthAfrica\n",
+      "Similarity Score: 91\n",
       "Total Comparisons: 158\n",
-      "Similarity Percentage: 44.30%\n"
+      "Similarity Percentage: 57.59%\n"
      ]
     }
    ],
    "source": [
+    "countries = {'africa':['Kenya','Nigeria','SouthAfrica'],'europe':['Denmark','UK','Finland'],'north_america_australia':['Australia','Canada','USA'],'west_asia':['Malaysia','Philippines','Singapore']}\n",
+    "clusters = ['Economy','Technology and Science', 'Entertainment','Lifestyle','Accident','Geopolitical','Intellectualism']\n",
     "\n",
     "def compare_traffic_rates(file1_path, file2_path):\n",
     "    \"\"\"Compares traffic rates between two CSV files and calculates a similarity score.\"\"\"\n",
@@ -68,13 +71,29 @@
     "# similarity mean almost > 62 (acceptable)\n",
     "\n",
     "# file1 = './output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/Malaysia_with_relative_traffic_rates.csv'\n",
-    "file1 = './output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/Philippines_with_relative_traffic_rates.csv'\n",
-    "file2 = './output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/Singapore_with_relative_traffic_rates.csv'\n",
+    "# file1 = './output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/Philippines_with_relative_traffic_rates.csv'\n",
+    "# file2 = './output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/Life_style/Singapore_with_relative_traffic_rates.csv'\n",
     "# bad\n",
     "\n",
     "# file2 = './output/regions/europe/genral_labeled_data_with_relative_traffic_rates/Technology and Science/Denmark_with_relative_traffic_rates.csv'\n",
     "# file2 = './output/regions/europe/genral_labeled_data_with_relative_traffic_rates/Technology and Science/Finland_with_relative_traffic_rates.csv'\n",
     "# file2 = './output/regions/europe/genral_labeled_data_with_relative_traffic_rates/Technology and Science/UK_with_relative_traffic_rates.csv'\n",
+    "\n",
+    "#1 0\n",
+    "#1 2\n",
+    "#0 2\n",
+    "africa = countries['africa']\n",
+    "topic = clusters[6]\n",
+    "\n",
+    "country1 = africa[0]\n",
+    "country2 = africa[2]\n",
+    "\n",
+    "# file1 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/Technology and Science/{country1}_with_relative_traffic_rates.csv'\n",
+    "# file2 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/Technology and Science/{country2}_with_relative_traffic_rates.csv'\n",
+    "file1 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/{topic}/{country1}_with_relative_traffic_rates.csv'\n",
+    "file2 = f'./output/regions/africa/genral_labeled_data_with_relative_traffic_rates/{topic}/{country2}_with_relative_traffic_rates.csv'\n",
+    "\n",
+    "\n",
     "\n",
     "comparison_result = compare_traffic_rates(file1, file2)\n",
     "\n",
@@ -83,9 +102,10 @@
     "    if total_comparisons == 0: #check if files are empty\n",
     "        print(\"Error: one or both files are empty or have only the header\")\n",
     "    else:\n",
+    "        print(f'{country1}-{country2}')\n",
     "        print(f\"Similarity Score: {similarity_score}\")\n",
     "        print(f\"Total Comparisons: {total_comparisons}\")\n",
-    "        print(f\"Similarity Percentage: {(similarity_score / total_comparisons) * 100:.2f}%\")"
+    "        print(f\"Similarity Percentage: {(similarity_score / total_comparisons) * 100:.2f}%\")\n"
    ]
   }
  ],
