initial region/category eligibility test is positive

--- a/Classification/relative_traffic_rate_calculation.ipynb
+++ b/Classification/relative_traffic_rate_calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,30 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country = countries['west_asia'][2]\n",
+    "country = countries['europe'][2]\n",
     "#--------general labels--------#\n",
     "# path = f\"./output/regions/africa/clustered_classified_data/{country}_clustered_classified.csv\"\n",
     "# path = f'./output/regions/europe/clustered_classified_data/{country}_clustered_classified.csv'\n",
     "# path = f'./output/regions/north_america_australia/clustered_classified_data/{country}_clustered_classified.csv'\n",
-    "path = f'./output/regions/west_asia/clustered_classified_data/{country}_clustered_classified.csv'\n",
+    "path = f'./output/regions/europe/clustered_classified_data/{country}_clustered_classified.csv'\n",
     "data = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First max traffic: 200000\n",
-      "Second max traffic: 200000\n",
+      "First max traffic: 100000\n",
+      "Second max traffic: 100000\n",
       "Duplicates found in 'date'. Aggregating data.\n"
      ]
     },
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alkrd\\AppData\\Local\\Temp\\ipykernel_7700\\2482072513.py:33: SettingWithCopyWarning: \n",
+      "C:\\Users\\alkrd\\AppData\\Local\\Temp\\ipykernel_7152\\2225991817.py:33: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -112,37 +112,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2016-11-28</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2016-11-29</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>13000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2016-11-30</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>201000.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>14000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-12-01</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>3000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-12-02</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>1000.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>21000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -154,37 +154,37 @@
        "    <tr>\n",
        "      <th>153</th>\n",
        "      <td>2017-04-30</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>3000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>154</th>\n",
        "      <td>2017-05-01</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>2000.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>4000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155</th>\n",
        "      <td>2017-05-02</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>7000.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>9000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
        "      <td>2017-05-03</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>3000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>157</th>\n",
        "      <td>2017-05-04</td>\n",
-       "      <td>Intellectualism</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>6000.0</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>7000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,23 +192,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          date    general_label  traffic_rate  total_traffic\n",
-       "0   2016-11-28  Intellectualism          0.00            0.0\n",
-       "1   2016-11-29  Intellectualism          0.00            0.0\n",
-       "2   2016-11-30  Intellectualism          0.55       201000.0\n",
-       "3   2016-12-01  Intellectualism          0.00            0.0\n",
-       "4   2016-12-02  Intellectualism          0.10         1000.0\n",
-       "..         ...              ...           ...            ...\n",
-       "153 2017-04-30  Intellectualism          0.00            0.0\n",
-       "154 2017-05-01  Intellectualism          0.10         2000.0\n",
-       "155 2017-05-02  Intellectualism          0.10         7000.0\n",
-       "156 2017-05-03  Intellectualism          0.00            0.0\n",
-       "157 2017-05-04  Intellectualism          0.10         6000.0\n",
+       "          date  general_label  traffic_rate  total_traffic\n",
+       "0   2016-11-28  Entertainment           0.1         2000.0\n",
+       "1   2016-11-29  Entertainment           0.1        13000.0\n",
+       "2   2016-11-30  Entertainment           0.1        14000.0\n",
+       "3   2016-12-01  Entertainment           0.1         3000.0\n",
+       "4   2016-12-02  Entertainment           0.1        21000.0\n",
+       "..         ...            ...           ...            ...\n",
+       "153 2017-04-30  Entertainment           0.1         3000.0\n",
+       "154 2017-05-01  Entertainment           0.1         4000.0\n",
+       "155 2017-05-02  Entertainment           0.1         9000.0\n",
+       "156 2017-05-03  Entertainment           0.1         3000.0\n",
+       "157 2017-05-04  Entertainment           0.1         7000.0\n",
        "\n",
        "[158 rows x 4 columns]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
     ")\n",
     "\n",
     "# Filter for a specific category\n",
-    "specific_category = clusters[6]  # Ensure clusters is defined\n",
+    "specific_category = clusters[2]  # Ensure clusters is defined\n",
     "specific_category_data = category_time_distribution[\n",
     "    category_time_distribution['general_label'] == specific_category\n",
     "]\n",
@@ -279,7 +279,7 @@
     "specific_category_data.reset_index(inplace=True)\n",
     "specific_category_data.rename(columns={'index': 'date'}, inplace=True)\n",
     "\n",
-    "pathString = f'./output/regions/west_asia/genral_labeled_data_with_relative_traffic_rates/{specific_category}/{country}_with_relative_traffic_rates.csv'\n",
+    "pathString = f'./output/regions/europe/genral_labeled_data_with_relative_traffic_rates/{specific_category}/{country}_with_relative_traffic_rates.csv'\n",
     "directory = os.path.dirname(pathString)\n",
     "\n",
     "if not os.path.exists(directory):\n",
